Fix that prevents the toc from being covered by the main menu.

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -6871,7 +6871,7 @@ body:has(#menu-controller:checked) {
   }
 
   .lg\:top-10 {
-    top: 2.5rem;
+    top: 6rem;
   }
 
   .lg\:top-\[140px\] {
